--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
     "ts-node": "^10.9.1",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/node": "^18.13.0",
     "ts-node-dev": "^2.0.0"
   }
 }
