--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "env": "^0.0.2",
     "express": "^4.18.2",
